<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;
use App\Models\Faculty;
class FacultyAvailability extends Model
{
    //
    protected $fillable = [
        'faculty_id',
        'day_of_week',
        'start_time',
        'end_time'
    ];

    public function faculty()
    {
        return $this->belongsTo(Faculty::class);
    }
}
